[tool.poetry]
name = "elasticbud"
version = "1.0.0"
description = ""
authors = ["tasker <tasker@ialcloud.xyz>"]

[tool.poetry.dependencies]
python = "^3.8"
elasticsearch = "^7.12.1"
elasticsearch-dsl = "^7.3.0"
retry = "^0.9.2"
pytest-depends = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
